Fix blog video not responsive

--- a/_css/main.scss
+++ b/_css/main.scss
@@ -426,7 +426,7 @@ footer {
 .post {
   margin-bottom: 80px;
 }
-.article-title {
+.post-title {
   margin-bottom: 10px;
   font-size: 35px;
   @include content-link;
@@ -441,7 +441,20 @@ footer {
   text-align: right;
   margin-top: 20px;
 }
-
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
+  iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
 
 // Blog Pagination
 .pagination {
